# jlabs

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/jlabs/: __main__.py  cli.py  connect.py  controller.py  eveng.py  labs.py  menu.py  tools.py  utils.py
tests/: test_connect.py  test_eveng.py  test_menu.py
